--- a/src/components/donation/donation.css
+++ b/src/components/donation/donation.css
@@ -5,7 +5,7 @@
     justify-content: center;
     
 }
-.donate-img{
+ .donation-image-container img{
 height: 100%;
 width: 93%;
 border-radius: 0px 0px 14px 14px;
@@ -83,7 +83,7 @@ form{
     display: flex;
     flex-direction: column;
 }
-.field label{
+.field label, .form_label{
     margin-left: 0px;
     width: fit-content;
     margin-bottom: 4px;
@@ -91,7 +91,7 @@ form{
     font-size: 14px;
       font-weight: 500;
 }
-.field input{
+.field input, .form_input{
     margin-bottom: 10px;
     text-align: left;
      height: 26px;
@@ -103,15 +103,15 @@ form{
      border: 2px solid rgb(221, 213, 213);
 }
 
-.form_label {
+/* .form_label {
     margin-left: 0px;
   width: fit-content;
   margin-bottom: 4px;
   font-family: 'Poppins', sans-serif;
   font-size: 14px;
     font-weight: 500;
-}
-.form_input {
+} */
+/* .form_input {
    margin-bottom: 10px;
    text-align: left;
     height: 26px;
@@ -121,7 +121,7 @@ form{
     border-radius: 5px;
     outline: none;
     border: 2px solid rgb(221, 213, 213);
-}
+} */
 .field select{
     height: 26px;
     width: 200px;
@@ -148,6 +148,7 @@ form{
 
 .field input:focus{
   border: 1px solid #a48139;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.13);
 }
 .form-field2{
     display: flex;
@@ -165,7 +166,7 @@ form{
 .parikranti-image{
     width: 160px;
     height: 40px;
-    margin-left: 142px;
+   margin-inline: auto;
     margin-bottom: 10px;
 }
 .pan-field{
@@ -206,7 +207,7 @@ form{
 
 
 .donate{
-    outline: none;
+    /* outline: none; */
     height: 40px;
     text-align: center;
     width: 80%;
