--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -81,13 +81,16 @@
     text-align: center;
     padding: 17px 20px;
     margin-top: 9px;
-    border-radius: 40px;
+  border-radius: 40px;
     text-decoration: none;
+    transition: all 0.05s ease-in-out;
   }
   
   li:hover {
     background-color: #1e1d1d;
-    
+    /* border-bottom: 2px solid black;
+  font-weight: 500; */
+    /* color: black; */
     color: white;
   }
   #search-panel {
