--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -54,10 +54,6 @@
   align-items: flex-end;
 }
 
-/* .card_title {
-  color: white;
-  font-size: 30px;
-} */
 
 .carousel_arrow_left,
 .carousel_arrow_right {
@@ -140,51 +136,7 @@
     
     }
                                /*  Goal Ends  */
-  .image-container{
-  overflow: hidden;
- }
-  .gallery {
-      display: grid;
-      grid-gap: 10px;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      grid-auto-rows: 200px;
-      grid-auto-flow: dense;
-      margin-left: 7%;
-      margin-right: 7%;
-    
-      width: 85%;
-  }
-  .gallery > div {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-  }
-  .gallery > div > img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 5px;
-  }
-  .gallery .tall {
-      grid-row: span 2;
-  }
-  .image-container img{
-      max-width: 100%;
-      height: auto;
-      vertical-align: middle;
-      display: inline-block;
-      transition: all 0.2s ease-in-out;
-  }
-  .media-image { 
-    
-      border: 0.3px solid black;
-    
-  }
-
-  .media-image:hover, .work-image:hover{
-    transform: scale(1.1);
-     
-    }
+ 
   
                                /* suggestion box starts*/
     
@@ -247,6 +199,7 @@ margin: 30px;
  
     .suggestion-form option, .suggestion-form select{
       font-size: 13px;
+      text-align: left;
       font-family: 'poppins';
       width: calc(100% - 12px);
       height: 40px;
@@ -272,8 +225,9 @@ margin: 30px;
       padding: 7px;
    
 }
-.suggestion-form textarea:focus{
-  border: 1px solid rgb(53, 111, 197);
+.suggestion-form textarea:focus,.suggestion-form select:focus{
+ 
+  box-shadow: 0 3px 6px rgba(0,0,0,0.13);
 }
  
     input[type="submit"] {
