--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -62,18 +62,18 @@
     border-radius: 50%;
   }
   
-  ul {
+ #navbar ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
   }
   
-  li {
+  #navbar li {
     float: left;
   }
   
-  li  {
+#navbar  li  {
     display: block;
     color: #333;
     font-weight: 400;
@@ -86,7 +86,7 @@
     transition: all 0.05s ease-in-out;
   }
   
-  li:hover {
+ #navbar li:hover {
     background-color: #1e1d1d;
     /* border-bottom: 2px solid black;
   font-weight: 500; */
