--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -12,7 +12,7 @@
 .carousel_wrapper {
   position: relative;
   width: 100%;
-  height: 620px;
+  height: 100%;
 }
 
 .carousel_card {
@@ -20,7 +20,7 @@
   flex: 1;
   position: absolute;
   width: 100%;
-  height: 620px;
+  height: 100%;
   overflow: hidden;
 
   -webkit-box-shadow: 0px 0px 11px 3px rgba(0, 0, 0, 0.15);
@@ -40,7 +40,7 @@
 
 .card_image {
   width: 100%;
-  height: 620px;
+  height: 100%;
   object-fit: cover;
 }
 
