--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -37,12 +37,16 @@
   transform: scale(1);
   pointer-events: visible;
 }
-
-.card_image {
+.carousel_card img{
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
+/* .card_image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+} */
 
 .card_overlay {
   position: absolute;
